aws/CF-HW.yml
AWSTemplateFormatVersion: 2010-09-09

# Parameters
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Mappings:
  AWSInstanceType2Arch:
    t2.micro:
      Arch: HVM64
  AWSInstanceType2NATArch:
    t2.micro:
      Arch: NATHVM64
  AWSRegionArch2AMI:
    us-east-1:
      HVM64: ami-0be2609ba883822ec


Resources:

  # First, a VPC:
  # TODO: Fill in missing values
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value:  

  # Our VPC will need internet access:   
  # TODO: Fill in missing values   
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: VPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    # Notice how you can't attach an IGW to a VPC unless both are created:
    Properties:
      VpcId:
      InternetGatewayId:

  # Now some subnets, 2 public and 2 private:
  # TODO: Fill in missing values
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
      CidrBlock: 
      MapPublicIpOnLaunch : 
      AvailabilityZone: !Select [ 0, !GetAZs ]    # Get the first AZ in the list        
      Tags:
      - Key: Name
        Value: 
  # TODO: Create the remaining subnets here
        
  # Some route tables for our subnets:
  # TODO: Fill in missing values
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
      Tags:
      - Key: Name
        Value: 
  
  # Public route table has direct routing to IGW
  # TODO: Fill in missing values
  PublicRoute1:   
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: 
      
  # Here is a private route table:
  # TODO: Fill in missing values
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
      Tags:
      - Key: Name
        Value: 
  
  # Private route table can access web via NAT (created below)
  # TODO: Fill in missing values
  PrivateRoute1:            
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: 
      DestinationCidrBlock: 0.0.0.0/0
      # Route traffic through the NAT Gateway:
      NatGatewayId: 

  # Attach the public subnets to public route tables, 
  # and attach the private subnets to private route tables:    
  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: 
      RouteTableId: 
  # TODO: Add the remaining subnet to route tables here

  # A NAT Gateway: 
  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt ElasticIPAddress.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags: 
      - Key: Name
        Value: 
  ElasticIPAddress:
    Type: AWS::EC2::EIP
    Properties:
      Domain: VPC

  # The following code will create an EC2
  # TODO: Fill in missing values
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType:
      KeyName: 
      NetworkInterfaces:
        - DeviceIndex: '0'
          AssociatePublicIpAddress : 
          SubnetId:  
          GroupSet:         
      ImageId: !FindInMap 
        - AWSRegionArch2AMI
        - !Ref 'AWS::Region'
        - !FindInMap 
          - AWSInstanceType2Arch
          - !Ref InstanceType
          - Arch

  # The following code will create a Security Group for your EC2 instance
  # TODO: Specify the VPC
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: 
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
